--- a/.huggingface.yml
+++ b/.huggingface.yml
@@ -1,4 +1,4 @@
-title: "Radar Legislativo LGBTQIA+ 🏳️‍🌈⚖️"
+title: "Radar Legislativo LGBTQIA+ 🏳️‍🌈⚖️📡"
 emoji: "🏳️‍🌈"
 colorFrom: purple
 colorTo: pink
@@ -7,7 +7,7 @@ sdk_version: "4.44.0"
 app_file: app.py
 pinned: false
 license: cc-by-nc-sa-4.0
-short_description: "Busca e análise de PLs LGBTQIA+ no Congresso Nacional"
+short_description: "Busca e análise de PLs LGBTQIA+ no Congresso, ALESP e Câmara de São Paulo"
 tags:
   - lgbtqia
   - legislacao
